# hotcoldhot

./: CMakeLists.txt  README.md  platformio.ini  watchbuild.sh
bfc/: ISocket.hpp  Tcp.hpp  Udp.hpp
boards/: esp32-3248S035C.json
components/lvgl-sdl/lvgl_drv/: lv_port_indev.h
components/lvgl/src/misc/: lv_log.c
cpp_dependencies/lvgl-sdl/lvgl_drv/: lv_sdl_disp.c
hotcoldhot_esp32_test/: .vscode-ctags
hotcoldhot_esp32_test/temp_sense/: CMakeLists.txt  sdkconfig
hotcoldhot_esp32_test/temp_sense/main/: CMakeLists.txt  app_main.c
include/: lv_conf.h
lib/board_devices/src/: board_devices.cpp  board_devices.cppx  board_devices.hpp
lib/display_manager/src/: display_manager.c  display_manager.h
lib/network_manager/src/: network_manager.c  network_manager.h
lib/storage_manager/src/: storage_manager.c  storage_manager.h
main/: App.cpp  CMakeLists.txt  Kconfig.projbuild  cmake_idf.cmake  cmake_sim_linux.cmake  main.cpp
main/ui/: UI.cpp  UI.hpp
main/ui/gl/: Keyboard.hpp  Label.hpp  MessageBox.cpp  Object.hpp  TextArea.hpp
remote_real/: CMakeLists.txt  sdkconfig.old
remote_real/main/: board_devices.cpp
remote_real_esp32/: sdkconfig
remote_real_esp32/main/: Buffer.hpp  CMakeLists.txt  Kconfig.projbuild  app_main.cpp  board_devices.cpp  network_manager.c
remote_sim/: main.cpp
script/: create_chroot.sh
sim_components/: main.cpp
sim_components/board_devices/src/: board_devices.cpp
sim_components/display_manager/src/: display_manager.c
sim_components/lvgl-sdl/lvgl_drv/: lv_port_indev.c
sim_components/network_manager/src/: network_manager.c
sim_components/storage_manager/src/: storage_manager.c
src/: App.cpp  App.hpp  CMakeLists.txt  IApp.hpp  SeriesView.hpp  app_common_types.hpp  arduino.cpp  config.h  configmap.hpp  example.c  file_utils.hpp  lv_conf.h  main.c  main.cpp  string_utils.hpp
src/ui/: GlobalStyles.cpp  GlobalStyles.hpp  UI.cpp  UI.hpp
src/ui/MenuProgram/: MenuProgram.cpp  MenuProgram.hpp  ProgramBuilder.cpp  ProgramBuilder.hpp
src/ui/gl/: Button.cpp  Button.hpp  Grid.hpp  Keyboard.cpp  Keyboard.hpp  Label.cpp  Label.hpp  MessageBox.cpp  MessageBox.hpp  Object.hpp  Rect.hpp  TabView.cpp  TabView.hpp  TextArea.cpp  TextArea.hpp  lv_utils.hpp
src/ui/menu/: MenuProgram.cpp  MenuProgram.hpp  MenuRun.cpp  MenuRun.hpp  MenuSettings.cpp  MenuSettings.hpp
test/: SeriesViewTest.cpp  main.cpp
